@@ -5,6 +5,7 @@ class JetProxy;
 class ElectronProxy;
 class MuonProxy;
 class TauProxy;
+class JetReclusteringTool;
 
 #include <vector>
 #include <string>
@@ -12,12 +13,16 @@ class TauProxy;
 class PhysObjProxyFiller
 {
  public:
-  PhysObjProxyFiller(float jetPtCut, float elPtCut, float muonPtCut, const std::string suffix);
+  PhysObjProxyFiller(float jetPtCut, float elPtCut, float muonPtCut, const std::string suffix, bool doRecl, const std::string suffixRecl);
 
   // fill with good and bad jets, overlap removal already performed
   void FillJetProxies(std::vector<JetProxy>& good_jets,
 		      std::vector<JetProxy>& bad_jets,
 		      std::vector<JetProxy>& b_jets) const;
+
+  void FillJetReclProxies(std::vector<JetProxy>& good_jets_recl,
+			  std::vector<float>& vD2) const;
+
 
   // fill with baseline and signal electron after overlap removal
   void FillElectronProxies(std::vector<ElectronProxy>& baseline_electrons,
@@ -40,7 +45,10 @@ class PhysObjProxyFiller
   float m_jetPtCut;
   float m_elPtCut;
   float m_muonPtCut;
+  bool m_doRecl;
   std::string m_suffix;
+  std::string m_suffixRecl;
+  JetReclusteringTool* m_jetReclusteringTool;
 };
 
 
