@@ -34,6 +34,7 @@ private:
   bool m_doSmallNtuple;
   bool m_fillTRJigsawVars;
   bool m_fillReclusteringVars;
+  bool m_doRecl;
   bool m_IsData;
   bool m_IsTruth;
   bool m_IsSignal;
@@ -48,6 +49,7 @@ private:
   NTISRVars m_isrntv;
 
   std::string m_suffix;
+  std::string m_suffixRecl;
   PhysObjProxyFiller* m_physobjsFiller;
   PhysObjProxyFillerTruth* m_physobjsFillerTruth;
   ZeroLeptonCutVal m_cutVal;
