@@ -1,4 +1,7 @@
 26-Aug-2015 Geraldine Conti
+	* Code for new reclustering added 
+
+26-Aug-2015 Geraldine Conti
 	* Added phTruthType, phTruthOrigin, phisEMvalue needed for ABCD method
 
 14-Aug-2015 Laurent Duflot
